feat(unknown): add some config file

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,4 +1,9 @@
-FROM ubuntu:latest
-LABEL authors="maximart"
+FROM    debian:bookworm
 
-ENTRYPOINT ["top", "-b"]
+LABEL   authors="maximart"
+
+RUN     apt-get update -y && apt-get install -y nginx openssl
+
+EXPOSE  443
+
+CMD     ["nginx", "-g", "daemon off;"]
