--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,4 +1,6 @@
-FROM ubuntu:latest
-LABEL authors="maximart"
+FROM    debian:bookworm
 
-ENTRYPOINT ["top", "-b"]
+LABEL   authors="maximart"
+
+RUN     apt update -y && \
+        apt install -y wordpress php-fpm
