--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,6 +1,15 @@
-events {
-}
 http {
     server {
+        listen 443 ssl; # listen the port concerned IPV4
+        listen [::]:443 ssl; # listen the port concerned IPV6
+        http2 on; # Recent version of http
+        ssl_certificate /certificat.crt; # PUB
+        ssl_certificate_key /certificat.key; # PRIV KEY
+        ssl_protocols TLSv1.3; # SSL/TLS
+        resolver 127.0.0.1; # Define the resolver
+
+        location / {
+            return 200 'gangnam style!';
+        }
     }
 }
