--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,10 +1,12 @@
 server {
     listen 443 ssl; # listen the port concerned IPV4
     listen [::]:443 ssl; # listen the port concerned IPV6
+    http2 on;
     ssl_certificate /certificat.crt; # PUB
     ssl_certificate_key /certificat.key; # PRIV KEY
     ssl_protocols TLSv1.3; # SSL/TLS
-    resolver 127.0.0.1; # Define the resolver
+    root /var/www/html; # root of the file. nobody can go behind the html directory
+    index index.html index.htm; # the first file of the site
     location / {
         return 200 'gangnam style!';
     }
