feat(unknown): add some config file

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,6 +2,7 @@ server {
     listen 443 ssl; # listen the port concerned IPV4
     listen [::]:443 ssl; # listen the port concerned IPV6
     http2 on;
+    server_name maximart.42.fr;
     ssl_certificate /certificat.crt; # PUB
     ssl_certificate_key /certificat.key; # PRIV KEY
     ssl_protocols TLSv1.3; # SSL/TLS
