fix(nginx): try to fix this config

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,12 +3,19 @@ server {
     listen [::]:443 ssl; # listen the port concerned IPV6
     http2 on;
     server_name maximart.42.fr;
+
     ssl_certificate /certificat.crt; # PUB
     ssl_certificate_key /certificat.key; # PRIV KEY
-    ssl_protocols TLSv1.3; # SSL/TLS
+    ssl_protocols TLSv1.2 TLSv1.3; # SSL/TLS
+
     root /var/www/html; # root of the file. nobody can go behind the html directory
     index index.html index.htm; # the first file of the site
+
     location / {
+        add_header Content-Type text/plain;
         return 200 'gangnam style!';
     }
+
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 }
