fix(nginx): try to fix this config

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,6 @@
 server {
-    listen 443 ssl; # listen the port concerned IPV4
-    listen [::]:443 ssl; # listen the port concerned IPV6
-    http2 on;
+    listen 443 ssl http2; # listen the port concerned IPV4
+    listen [::]:443 ssl http2; # listen the port concerned IPV6
     server_name maximart.42.fr;
 
     ssl_certificate /certificat.crt; # PUB
