fix(nginx): try to fix this config

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -5,7 +5,7 @@ server {
 
     ssl_certificate /certificat.crt; # PUB
     ssl_certificate_key /certificat.key; # PRIV KEY
-    ssl_protocols TLSv1.2 TLSv1.3; # SSL/TLS
+    ssl_protocols TLSv1.3; # SSL/TLS
 
     root /var/www/html; # root of the file. nobody can go behind the html directory
     index index.html index.htm; # the first file of the site
