--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,7 +1,7 @@
 server {
     listen 443 ssl http2; # listen the port concerned IPV4
     listen [::]:443 ssl http2; # listen the port concerned IPV6
-    server_name maximart.42.fr;
+    server_name www.maximart.42.fr maximart.42.fr;
 
     ssl_certificate /certificat.crt; # PUB
     ssl_certificate_key /certificat.key; # PRIV KEY
@@ -10,11 +10,10 @@ server {
     root /var/www/html; # root of the file. nobody can go behind the html directory
     index index.html index.htm; # the first file of the site
 
-    location / {
-        add_header Content-Type text/plain;
-        return 200 'gangnam style!';
+    location ~ \.php$ {
+        try_files  $uri = 404;
+        fastcgi_pass  127.0.0.1:9000;
+        fastcgi_index  index.php;
+        include  fastcgi.conf;
     }
-
-    error_log /var/log/nginx/error.log;
-    access_log /var/log/nginx/access.log;
 }
