fix(nginx): enhanced the docker file for a better directory architecture

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,5 +2,5 @@ FROM    debian:bookworm
 
 LABEL   authors="maximart"
 
-RUN     apt update -y && \
-        apt install -y wordpress php-fpm
+RUN     apt-get update -y && \
+        apt-get install -y
