--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -10,10 +10,12 @@ server {
     root /var/www/html; # root of the file. nobody can go behind the html directory
     index index.html index.htm; # the first file of the site
 
-    location ~ \.php$ {
-        try_files  $uri = 404;
-        fastcgi_pass  127.0.0.1:9000;
-        fastcgi_index  index.php;
-        include  fastcgi.conf;
+    location / {
+        add_header Content-Type text/plain;
+        return 200 'gangnam style!';
+        #             try_files  $uri = 404;
+        #             fastcgi_pass  127.0.0.1:9000;
+        #             fastcgi_index  index.php;
+        #             include  fastcgi.conf;
     }
 }
