fix(nginx): enhanced the docker file for a better directory architecture

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -3,8 +3,8 @@ server {
     listen [::]:443 ssl http2; # listen the port concerned IPV6
     server_name www.maximart.42.fr maximart.42.fr;
 
-    ssl_certificate /certificat.crt; # PUB
-    ssl_certificate_key /certificat.key; # PRIV KEY
+    ssl_certificate /etc/nginx/ssl/certificat.crt; # PUB
+    ssl_certificate_key /etc/nginx/ssl/certificat.key; # PRIV KEY
     ssl_protocols TLSv1.3; # SSL/TLS
 
     root /var/www/html; # root of the file. nobody can go behind the html directory
