feat(wordpress): add configuration location for wordpress

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -10,12 +10,10 @@ server {
     root /var/www/html; # root of the file. nobody can go behind the html directory
     index index.html index.htm; # the first file of the site
 
-    location / {
-        add_header Content-Type text/plain;
-        return 200 'gangnam style!';
+    location ~ \.php$ {
+        try_files  $uri = 404;
+        fastcgi_pass  wordpress:9000;
+        fastcgi_index  index.php;
+        include  fastcgi.conf;
     }
-    #             try_files  $uri = 404;
-    #             fastcgi_pass  127.0.0.1:9000;
-    #             fastcgi_index  index.php;
-    #             include  fastcgi.conf;
 }
