--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     depends_on:
       - mariadb
     volumes:
-      - wp_data:/var/www/html
+      - wp_data:/var/www/html:rw
     networks:
       - inception
 
@@ -35,7 +35,7 @@ services:
     depends_on:
       - wordpress
     volumes:
-      - wp_data:/var/www/html
+      - wp_data:/var/www/html:ro
     networks:
       - inception
 
