feat(docker): add some basic installation for mariadb.

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -1,4 +1,7 @@
-FROM ubuntu:latest
-LABEL authors="maximart"
+FROM    debian:bookworm
 
-ENTRYPOINT ["top", "-b"]
+LABEL   authors="maximart"
+
+RUN     apt-get update -y && \
+        apt-get install -y mariadb-server && \
+        rm -rf /var/lib/apt/lists/*
