--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,6 +2,8 @@ services:
 
   mariadb:
     container_name: mariadb
+    secrets:
+      - MYSQL_ROOT_PASSWORD
     build:
       context: ./requirements/mariadb
     restart: always
@@ -10,7 +12,11 @@ services:
       - db_data:/var/lib/mysql
     networks:
       - inception
-
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "--silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   wordpress:
     container_name: wordpress
@@ -19,11 +25,13 @@ services:
     restart: always
     env_file: .env
     depends_on:
-      - mariadb
+      mariadb:
+        condition: service_healthy
     volumes:
       - wp_data:/var/www/html:rw
     networks:
       - inception
+
 
   nginx:
     container_name: nginx
@@ -48,3 +56,7 @@ volumes:
 networks:
   inception:
     driver: bridge
+
+secrets:
+  MYSQL_ROOT_PASSWORD:
+    external: true
