feat(run): add some commands and script to mariadb configuration

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -4,4 +4,12 @@ LABEL   authors="maximart"
 
 RUN     apt-get update -y && \
         apt-get install -y mariadb-server && \
-        rm -rf /var/lib/apt/lists/*
+        rm -rf /var/lib/apt/lists/* && \
+        sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf
+
+COPY    /conf/init_db.sh /usr/local/bin/init_db.sh
+RUN     chmod +x /usr/local/bin/init_db.sh
+
+EXPOSE  3306
+
+CMD     ["/usr/local/bin/init_db.sh"]
