feat(tests): test run for apt-get php-fpm etc

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -3,4 +3,8 @@ FROM    debian:bookworm
 LABEL   authors="maximart"
 
 RUN     apt-get update -y && \
-        apt-get install -y
+        apt-get install -y \
+        php-fpm \
+
+
+EXPOSE  9000
