feat(tests): add some commands to resolve problem error 2002

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -2,8 +2,8 @@ services:
 
   mariadb:
     container_name: mariadb
-    secrets:
-      - MYSQL_ROOT_PASSWORD
+#    secrets:
+#      - MYSQL_ROOT_PASSWORD
     build:
       context: ./requirements/mariadb
     restart: always
