feat(tests): add some commands to resolve problem error 2002

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,8 +5,9 @@ LABEL   authors="maximart"
 RUN     apt-get update -y && \
         apt-get install -y mariadb-server && \
         rm -rf /var/lib/apt/lists/* && \
-        sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf && \
-        mkdir -p /run/mysqld && \
+        sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf
+
+RUN     mkdir -p /run/mysqld && \
         chown mysql:mysql /run/mysqld && \
         chmod 755 /run/mysqld
 
