--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -7,7 +7,12 @@ services:
     build:
       context: ./requirements/mariadb
     restart: always
-    env_file: .env
+#    env_file: .env
+    environment:
+      MYSQL_DATABASE: wordpress
+      MYSQL_USER: wordpress
+      MYSQL_ROOT_PASSWORD: somewordpress
+      MYSQL_PASSWORD: wordpress
     volumes:
       - db_data:/var/lib/mysql
     networks:
