--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -5,24 +5,28 @@ LABEL   authors="maximart"
 RUN     apt-get update -y && \
         apt-get install -y \
         php-fpm \
-        curl \
-        dom \
-        exif \
-        fileinfo \
-        hash \
-        igbinary \
-        imagick \
-        intl \
-        json \
-        mbstring \
-        pcre \
-        xml \
-        zip \
+        php-json \
+        php-mysql \
+        php-curl \
+        php-xml \
+        php-exif \
+        php-fileinfo \
+        php-igbinary \
+        php-imagick \
+        php-intl \
+        php-mbstring \
+        php-zip \
+        wget && \
+        rm -rf /var/lib/apt/lists/*
 
-#RUN    sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = 9000/' /etc/php/8.2/fpm/pool.d/www.conf && \
-#       sed -i 's/;listen.allowed_clients = 127.0.0.1/listen.allowed_clients = 0.0.0.0/' /etc/php/8.2/fpm/pool.d/www.conf && \
-#       sed -i 's/pm.max_children = 5/pm.max_children = 20/' /etc/php/8.2/fpm/pool.d/www.conf && \
-#        sed -i 's/pm.max_requests = 500/pm.max_requests = 200/' /etc/php/8.2/fpm/pool.d/www.conf
+RUN     sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = 9000/' /etc/php/8.2/fpm/pool.d/www.conf && \
+        sed -i 's/;listen.allowed_clients = 127.0.0.1/listen.allowed_clients = 0.0.0.0/' /etc/php/8.2/fpm/pool.d/www.conf
 
+RUN     wget https://wordpress.org/latest.tar.gz && \
+        tar -xzf latest.tar.gz && \
+        rm -rf latest.tar.gz && \
+        cp wordpress/* /var/www/html/
 
 EXPOSE  9000
+
+CMD     ["php-fpm8.2", "-F"]
