feat(tests): add some test to resolve error nginx

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,7 @@ server {
     ssl_protocols TLSv1.3; # SSL/TLS
 
     root /var/www/html; # root of the file. nobody can go behind the html directory
-    index index.html index.htm; # the first file of the site
+    index index.php index.html index.htm; # the first file of the site
 
     location ~ \.php$ {
         try_files  $uri = 404;
