feat(config): add the configuration file to wordpress and test it

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -34,5 +34,7 @@ EXPOSE  9000
 
 COPY    /conf/wp-config-sample.php var/www/html/wordpress/wp-config.php
 
+RUN     chown www-data:www-data /var/www/html/wp-config.php
+
 CMD     ["php-fpm8.2", "-F"]
 
