--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -20,15 +20,14 @@ RUN     apt-get update -y && \
         rm -rf /var/lib/apt/lists/*
 
 
-RUN     sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = 9000/g' /etc/php/8.2/fpm/pool.d/www.conf
-
-RUN     echo "clear_env = no" >> /etc/php/8.2/fpm/pool.d/www.conf
+RUN     sed -i 's/listen = \/run\/php\/php8.2-fpm.sock/listen = 9000/g' /etc/php/8.2/fpm/pool.d/www.conf && \
+        echo "clear_env = no" >> /etc/php/8.2/fpm/pool.d/www.conf
 
 RUN     mkdir -p /var/www/html && \
         wget https://wordpress.org/latest.tar.gz && \
         tar -xzf latest.tar.gz && \
         rm -rf latest.tar.gz && \
-        cp -r wordpress/* /var/www/html/ && \
+        mv -r wordpress/* /var/www/html/ && \
         chown -R www-data:www-data /var/www/html && \
         chmod -R 755 /var/www/html
 
