feat(config): add the configuration file to wordpress and test it

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -27,7 +27,7 @@ RUN     mkdir -p /var/www/html && \
         wget https://wordpress.org/latest.tar.gz && \
         tar -xzf latest.tar.gz && \
         rm -rf latest.tar.gz && \
-        mv -r wordpress/* /var/www/html/ && \
+        mv wordpress/* /var/www/html/ && \
         chown -R www-data:www-data /var/www/html && \
         chmod -R 755 /var/www/html
 
