--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -5,13 +5,13 @@ LABEL   authors="maximart"
 RUN     apt-get update -y && \
         apt-get install -y mariadb-server && \
         rm -rf /var/lib/apt/lists/* && \
-        sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf
-
-RUN     mkdir -p /run/mysqld && \
+        sed -i 's/bind-address.*/bind-address = 0.0.0.0/' /etc/mysql/mariadb.conf.d/50-server.cnf && \
+        mkdir -p /run/mysqld && \
         chown mysql:mysql /run/mysqld && \
         chmod 755 /run/mysqld
 
 COPY    /tools/init_db.sh /usr/local/bin/init_db.sh
+
 RUN     chmod +x /usr/local/bin/init_db.sh
 
 EXPOSE  3306
