--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -31,6 +31,11 @@ RUN     mkdir -p /var/www/html && \
         chown -R www-data:www-data /var/www/html && \
         chmod -R 755 /var/www/html
 
+RUN     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+        chmod +x wp-cli.phar && \
+        mv wp-cli.phar /usr/local/bin/wp && \
+        wp core install --url=$WP_DOMAIN_NAME --title=$WP_TITLE --admin_user=$WP_ADMIN_USER --admin_password=$WP_ADMIN_PASSWORD --admin_email=$WP_ADMIN_EMAIL
+
 COPY    /conf/wp-config.php /var/www/html/wp-config.php
 
 RUN     chown www-data:www-data /var/www/html/wp-config.php
