feat(config): add the configuration file to wordpress and test it

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -17,6 +17,7 @@ RUN     apt-get update -y && \
         php-mbstring \
         php-zip \
         wget && \
+        curl && \
         rm -rf /var/lib/apt/lists/*
 
 
