feat(config): add the configuration file to wordpress and test it

--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -16,7 +16,7 @@ RUN     apt-get update -y && \
         php-intl \
         php-mbstring \
         php-zip \
-        wget && \
+        wget \
         curl && \
         rm -rf /var/lib/apt/lists/*
 
