--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -34,13 +34,14 @@ RUN     mkdir -p /var/www/html && \
 
 COPY    /conf/wp-config.php /var/www/html/wp-config.php
 
-RUN     chown www-data:www-data /var/www/html/wp-config.php
-
-RUN     curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
+RUN     chown www-data:www-data /var/www/html/wp-config.php && \
+        curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar && \
         chmod +x wp-cli.phar && \
-        mv wp-cli.phar /usr/local/bin/wp && \
-        cd /var/www/html && \
-        wp core install --url="https://$WP_DOMAIN_NAME" --title="$WP_TITLE" --admin_user="$WP_ADMIN_USER" --admin_password="$WP_ADMIN_PASSWORD" --admin_email="$WP_ADMIN_EMAIL" --allow-root
+        mv wp-cli.phar /usr/local/bin/wp
+
+WORKDIR /var/www/html/
+
+RUN     wp core install --url="https://$WP_DOMAIN_NAME" --title="$WP_TITLE" --admin_user="$WP_ADMIN_USER" --admin_password="$WP_ADMIN_PASSWORD" --admin_email="$WP_ADMIN_EMAIL" --allow-root
 
 
 EXPOSE  9000
