--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -13,10 +13,11 @@ services:
     networks:
       - inception
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "--silent"]
-      interval: 15s
-      timeout: 10s
-      retries: 10
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "--silent"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   wordpress:
     container_name: wordpress
