--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,5 +1,6 @@
-services:
+include:
 
+services:
   mariadb:
     container_name: mariadb
 #    secrets:
@@ -50,12 +51,21 @@ services:
 
 volumes:
   db_data:
+    name: mariadb
     driver: local
+    driver_opts:
+      bind: none
+      device: ${HOME}/data/mariadb
   wp_data:
+    name: wordpress
     driver: local
+    driver_opts:
+      bind: none
+      device: ${HOME}/data/wordpress
 
 networks:
   inception:
+    name: inception
     driver: bridge
 
 secrets:
