feat(configuration): change the env variable and add secrets

--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -26,11 +26,11 @@ services:
     networks:
       - inception
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "--silent"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "--silent"]
       interval: 15s
       timeout: 10s
       retries: 5
-      start_period: 60s
+      start_period: 30s
 
   wordpress:
     image: wordpress:1.0
