--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     networks:
       - inception
     healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "root", "--silent"]
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-u", "healthcheck", "--silent"]
       interval: 15s
       timeout: 10s
       retries: 5
