--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -73,14 +73,14 @@ volumes:
     driver: local
     driver_opts:
       type: none
-      device: "${HOME}/${USER}/data/mariadb"
+      device: "${HOME}/data/mariadb"
       o: bind
   wp_data:
     name: wordpress
     driver: local
     driver_opts:
       type: none
-      device: "${HOME}/${USER}/data/wordpress"
+      device: "${HOME}/data/wordpress"
       o: bind
 
 networks:
